--- a/index.html
+++ b/index.html
@@ -1824,10 +1824,6 @@
 </li>
 </ul>
 </li>
-</ul>
-  </div>
-  <div class="col-md-6" markdown="1">
-<ul>
 <li>
 <h3 id="2018">2018</h3>
 <ul>
@@ -1859,11 +1855,75 @@
 </li>
 </ul>
 </li>
+</ul>
+  </div>
+  <div class="col-md-6" markdown="1">
+<ul>
 <li>
 <h3 id="2016">2016</h3>
 <ul>
 <li>
 <h4 id="2016-winners-of-pa-consulting-group-video-challenge">2016 Winners of PA Consulting Group Video Challenge</h4>
+</li>
+<li>
+<h4 id="2016-finalists-of-social-impact-award">2016 Finalists of Social Impact Award</h4>
+</li>
+<li>
+<h4 id="2016-finalists-of-hsbc-grow-your-future">2016 Finalists of HSBC Grow Your Future</h4>
+</li>
+<li>
+<h4 id="2016-first-prize-at-2016-cisco-switch-up-challenge">2016 First prize at 2016 CISCO Switch-up Challenge</h4>
+</li>
+</ul>
+</li>
+<li>
+<h3 id="2015">2015</h3>
+<ul>
+<li>
+<h4 id="2015-national-representative-at-expo-in-milan-italy">2015 National Representative at Expo in Milan, Italy</h4>
+</li>
+<li>
+<h4 id="2015-third-place-at-unilever-sustainability-challenge">2015 Third place at Unilever Sustainability Challenge</h4>
+</li>
+</ul>
+</li>
+<li>
+<h3 id="2014">2014</h3>
+<ul>
+<li>
+<h4 id="2014-diploma-of-st-gorazd">2014 Diploma of St. Gorazd</h4>
+</li>
+<li>
+<h4 id="2014-national-representative-at-expo-sciences-europe">2014 National Representative at Expo Sciences Europe</h4>
+</li>
+<li>
+<h4 id="2014-gold-medal-and-a-special-award-at-i-sweeep">2014 Gold Medal and a Special Award at I-SWEEEP</h4>
+</li>
+<li>
+<h4 id="2014-ambassador-of-youth">2014 Ambassador of Youth</h4>
+</li>
+<li>
+<h4 id="2014-award-of-the-rector-of-paneuropean-university-in-bratislava">2014 Award of the Rector of Paneuropean University in Bratislava</h4>
+</li>
+<li>
+<h4 id="2014-stredoškoláci-do-sveta-scholarship">2014 Stredoškoláci do sveta Scholarship</h4>
+</li>
+</ul>
+</li>
+<li>
+<h3 id="2013">2013</h3>
+<ul>
+<li>
+<h4 id="2013-award-of-the-comenius-university-for-the-best-science-project">2013 Award of the Comenius University for the Best Science Project</h4>
+</li>
+<li>
+<h4 id="2013-diploma-of-st-gorazd">2013 Diploma of St. Gorazd</h4>
+</li>
+<li>
+<h4 id="2013-silver-medal-at-the-austrian-young-physicist-tournament">2013 Silver medal at the Austrian Young Physicist Tournament</h4>
+</li>
+<li>
+<h4 id="2013-third-place-at-cemach">2013 Third place at CEMACH</h4>
 </li>
 </ul>
 </li>
