Adding media appearances/changing publications

--- a/publication/10-1007-978-3-030-44534-8-1/index.html
+++ b/publication/10-1007-978-3-030-44534-8-1/index.html
@@ -883,8 +883,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header" href="https://link.springer.com/chapter/10.1007/978-3-030-44534-8_1" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
@@ -893,6 +899,14 @@
   Cite
 </a>
 
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header" href="https://github.com/martinferianc/Improving_Per_Esti_for_FPGA-based_Acc_for_CNNs-ARC2020" target="_blank" rel="noopener">
+  Code
+</a>
 
 
 
