--- a/publication/9609847/index.html
+++ b/publication/9609847/index.html
@@ -833,8 +833,8 @@
     
 
   <span >
-      Martin Ferianc</span>, <span >
-      Zhiqiang Que</span>, <span >
+      Martin Ferianc</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
+      Zhiqiang Que</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
       Hongxiang Fan</span>, <span >
       Wayne Luk</span>, <span >
       Miguel Rodrigues</span>
@@ -883,8 +883,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header" href="https://ieeexplore.ieee.org/document/9609847" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
