--- a/publication/9743481/index.html
+++ b/publication/9743481/index.html
@@ -833,8 +833,8 @@
     
 
   <span >
-      Hongxiang Fan</span>, <span >
-      Martin Ferianc</span>, <span >
+      Hongxiang Fan</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
+      Martin Ferianc</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
       Zhiqiang Que</span>, <span >
       Shuanglong Liu</span>, <span >
       Xinyu Niu</span>, <span >
@@ -885,8 +885,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header" href="https://ieeexplore.ieee.org/document/9743481" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
