--- a/publication/ferianc-2021-improving/index.html
+++ b/publication/ferianc-2021-improving/index.html
@@ -902,6 +902,14 @@
 </a>
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header" href="https://github.com/martinferianc/Improving_Per_Esti_for_FPGA-based_Acc_for_CNNs-ARC2020" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
