--- a/publication/9586137/index.html
+++ b/publication/9586137/index.html
@@ -833,8 +833,8 @@
     
 
   <span >
-      Hongxiang Fan</span>, <span >
-      Martin Ferianc</span>, <span >
+      Hongxiang Fan</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
+      Martin Ferianc</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
       Miguel Rodrigues</span>, <span >
       Hongyu Zhou</span>, <span >
       Xinyu Niu</span>, <span >
@@ -884,8 +884,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header" href="https://ieeexplore.ieee.org/document/9586137" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
