--- a/publication/9712541/index.html
+++ b/publication/9712541/index.html
@@ -885,8 +885,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header" href="https://ieeexplore.ieee.org/document/9712541" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
