--- a/publication/fan-2018-real/index.html
+++ b/publication/fan-2018-real/index.html
@@ -886,8 +886,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header" href="https://ieeexplore.ieee.org/document/8742299" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
