Adding award and teaching experience

--- a/index.html
+++ b/index.html
@@ -1634,6 +1634,12 @@
 </li>
 </ul>
 </li>
+<li>
+<h4 id="teaching-assistant-at-papaa-summer-school">Teaching assistant at PAPAA Summer School</h4>
+<ul>
+<li>Summer 2018</li>
+</ul>
+</li>
 </ul>
   </div>
   <div class="col-md-4" markdown="1">
@@ -1885,6 +1891,9 @@
 </li>
 <li>
 <h4 id="2014-stredoškoláci-do-sveta-scholarship">2014 Stredoškoláci do sveta Scholarship</h4>
+</li>
+<li>
+<h4 id="2014-green-fond-project-grant">2014 Green Fond Project Grant</h4>
 </li>
 </ul>
 </li>
