--- a/index.html
+++ b/index.html
@@ -1952,6 +1952,9 @@
 <li>
 <h4 id="už-počas-strednej-mal-vlastný-patent-martin-je-slovákom-v-zahraničíhttpsdenniknskblog1386627proudtobeslovak4"><a href="https://dennikn.sk/blog/1386627/proudtobeslovak4/" target="_blank" rel="noopener">Už počas strednej mal vlastný patent, Martin je Slovákom v zahraničí.</a></h4>
 </li>
+<li>
+<h4 id="z-galérie-tvorcov-martin-ferianchttpswwwindpropgovsko-uradeaktualityaktualityclanokobsah-casopisu-dusevne-vlastnictvo-c-4-2019"><a href="https://www.indprop.gov.sk/o-urade/aktuality/aktuality?clanok=obsah-casopisu-dusevne-vlastnictvo-c-4-2019" target="_blank" rel="noopener">Z galérie tvorcov: Martin Ferianc</a></h4>
+</li>
 </ul>
 </li>
 <li>
