--- a/index.html
+++ b/index.html
@@ -1922,6 +1922,14 @@
   <div class="col-md-6" markdown="1">
 <ul>
 <li>
+<h3 id="2022">2022</h3>
+<ul>
+<li>
+<h4 id="22-ročník-svetového-dňa-duševného-vlastníctva-sme-oslávili-konferenciou-venovanou-mládeži-a-inováciámhttpswwwindpropgovsko-uradeaktualityaktualityclanok22-rocnik-svetoveho-dna-dusevneho-vlastnictva-sme-oslavili-konferenciou-venovanou-mladezi-a-inovaciam"><a href="https://www.indprop.gov.sk/o-urade/aktuality/aktuality?clanok=22-rocnik-svetoveho-dna-dusevneho-vlastnictva-sme-oslavili-konferenciou-venovanou-mladezi-a-inovaciam" target="_blank" rel="noopener">22. ROČNÍK SVETOVÉHO DŇA DUŠEVNÉHO VLASTNÍCTVA SME OSLÁVILI KONFERENCIOU VENOVANOU MLÁDEŽI A INOVÁCIÁM</a></h4>
+</li>
+</ul>
+</li>
+<li>
 <h3 id="2021-1">2021</h3>
 <ul>
 <li>
