--- a/index.html
+++ b/index.html
@@ -1591,13 +1591,13 @@
 <h3 id="teaching">Teaching</h3>
 <ul>
 <li>
-<h4 id="co-lecturer-in-foundations-of-machine-learning-and-data-science-at-ucl-departmet-of-information-studies">Co-Lecturer in Foundations of Machine Learning and Data Science at UCL, Departmet of Information Studies</h4>
+<h4 id="co-lecturer-in-foundations-of-machine-learning-and-data-science-at-ucl-department-of-information-studies">Co-Lecturer in Foundations of Machine Learning and Data Science at UCL, Department of Information Studies</h4>
 <ul>
 <li>Spring 2021: <a href="https://www.ucl.ac.uk/information-studies/inst0060-foundations-machine-learning-and-data-science" target="_blank" rel="noopener">link</a></li>
 </ul>
 </li>
 <li>
-<h4 id="co-lecturer-in-introduction-to-machine-learning-a-masterclass-at-ucl-departmet-of-pharmacology">Co-Lecturer in Introduction to Machine Learning, a Masterclass at UCL, Departmet of Pharmacology</h4>
+<h4 id="co-lecturer-in-introduction-to-machine-learning-a-masterclass-at-ucl-department-of-pharmacology">Co-Lecturer in Introduction to Machine Learning, a Masterclass at UCL, Department of Pharmacology</h4>
 <ul>
 <li>Spring 2020</li>
 </ul>
@@ -1615,13 +1615,13 @@
 </ul>
 </li>
 <li>
-<h4 id="postgraduate-teaching-assistant-for-introduction-to-machine-learning-at-ucl-departmet-of-information-studies">Postgraduate Teaching Assistant for Introduction to Machine Learning at UCL, Departmet of Information Studies</h4>
+<h4 id="postgraduate-teaching-assistant-for-introduction-to-machine-learning-at-ucl-department-of-information-studies">Postgraduate Teaching Assistant for Introduction to Machine Learning at UCL, Department of Information Studies</h4>
 <ul>
 <li>Spring 2020: <a href="https://www.ucl.ac.uk/information-studies/inst0060-foundations-machine-learning-and-data-science" target="_blank" rel="noopener">link</a></li>
 </ul>
 </li>
 <li>
-<h4 id="postgraduate-teaching-assistant-for-programming-2-at-ucl-departmet-of-information-studies">Postgraduate Teaching Assistant for Programming 2 at UCL, Departmet of Information Studies</h4>
+<h4 id="postgraduate-teaching-assistant-for-programming-2-at-ucl-department-of-information-studies">Postgraduate Teaching Assistant for Programming 2 at UCL, Department of Information Studies</h4>
 <ul>
 <li>Autumn 2019: <a href="https://www.ucl.ac.uk/information-studies/inst0004-programming-2" target="_blank" rel="noopener">link</a></li>
 </ul>
