--- a/index.html
+++ b/index.html
@@ -871,12 +871,6 @@
           </a>
         </h3>
         
-        <h3>
-          <a href="https://www.turing.ac.uk/people/enrichment-students/martin-ferianc" target="_blank" rel="noopener">
-          <span>The Alan Turing Institute (Enrichment Student)</span>
-          </a>
-        </h3>
-        
       </div>
 
       <ul class="network-icon" aria-hidden="true">
@@ -1761,6 +1755,14 @@
   <div class="col-md-6" markdown="1">
 <ul>
 <li>
+<h3 id="2022">2022</h3>
+<ul>
+<li>
+<h4 id="2022-hyundai-vision-conference-participant">2022 Hyundai Vision Conference Participant</h4>
+</li>
+</ul>
+</li>
+<li>
 <h3 id="2021">2021</h3>
 <ul>
 <li>
@@ -1922,7 +1924,7 @@
   <div class="col-md-6" markdown="1">
 <ul>
 <li>
-<h3 id="2022">2022</h3>
+<h3 id="2022-1">2022</h3>
 <ul>
 <li>
 <h4 id="22-ročník-svetového-dňa-duševného-vlastníctva-sme-oslávili-konferenciou-venovanou-mládeži-a-inováciámhttpswwwindpropgovsko-uradeaktualityaktualityclanok22-rocnik-svetoveho-dna-dusevneho-vlastnictva-sme-oslavili-konferenciou-venovanou-mladezi-a-inovaciam"><a href="https://www.indprop.gov.sk/o-urade/aktuality/aktuality?clanok=22-rocnik-svetoveho-dna-dusevneho-vlastnictva-sme-oslavili-konferenciou-venovanou-mladezi-a-inovaciam" target="_blank" rel="noopener">22. ROČNÍK SVETOVÉHO DŇA DUŠEVNÉHO VLASTNÍCTVA SME OSLÁVILI KONFERENCIOU VENOVANOU MLÁDEŽI A INOVÁCIÁM</a></h4>
