--- a/index.html
+++ b/index.html
@@ -2483,16 +2483,13 @@
     
 
   <span >
-      Hongxiang Fan</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
-      Martin Ferianc</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
-      Miguel Rodrigues</span>, <span >
-      Hongyu Zhou</span>, <span >
-      Xinyu Niu</span>, <span >
+      Hongxiang Fan</span>, <span >
+      Martin Ferianc</span>, <span >
       Wayne Luk</span>
   </span>
-  (2021).
-  <a href="/publication/9586137/">High-Performance FPGA-based Accelerator for Bayesian Neural Networks</a>.
-  <em>2021 58th ACM/IEEE Design Automation Conference (DAC)</em>.
+  (2022).
+  <a href="/publication/fan-2022-enabling/">Enabling fast uncertainty estimation: accelerating bayesian transformers via algorithmic and hardware optimizations</a>.
+  <em>Proceedings of the 59th ACM/IEEE Design Automation Conference</em>.
   
   <p>
 
@@ -2509,14 +2506,14 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/document/9586137" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://dl.acm.org/doi/abs/10.1145/3489517.3530451" target="_blank" rel="noopener">
   PDF
 </a>
 
 
 
 <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
-        data-filename="/publication/9586137/cite.bib">
+        data-filename="/publication/fan-2022-enabling/cite.bib">
   Cite
 </a>
 
@@ -2531,10 +2528,6 @@
 
 
 
-
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/10.1109/DAC18074.2021.9586137" target="_blank" rel="noopener">
-  DOI
-</a>
 
 
 </p>
