[TIP] Add Journal

--- a/index.html
+++ b/index.html
@@ -1647,6 +1647,7 @@
 <li>IEEE Transactions for Neural Networks and Learning Systems (TNNLS)</li>
 <li>IEEE Journal of Selected Topics in Signal Processing (JSTSP)</li>
 <li>IEEE Transactions on Circuits and Systems I (TCAS-I)</li>
+<li>IEEE Transactions on Image Processing (TIP)</li>
 <li>International Conference on Artificial Neural Networks 2021 (ICANN)</li>
 </ul>
 </li>
