Reading group organiser

--- a/index.html
+++ b/index.html
@@ -1663,6 +1663,12 @@
 <li><a href="https://growni.sk/mentor/nzwD3KCH2dOt1RPc22mrfV6Gm5S2" target="_blank" rel="noopener">Growni</a>: Remote counselling to self-driven high-school students from university alumni</li>
 </ul>
 </li>
+<li>
+<h4 id="organiser">Organiser:</h4>
+<ul>
+<li>Weekly Machine learning reading group at UCL EE Department (~25 people, 2023)</li>
+</ul>
+</li>
 </ul>
 </li>
 </ul>
