--- a/index.html
+++ b/index.html
@@ -1649,6 +1649,7 @@
 <li>IEEE Transactions on Circuits and Systems I (TCAS-I)</li>
 <li>IEEE Transactions on Image Processing (TIP)</li>
 <li>International Conference on Artificial Neural Networks 2021 (ICANN)</li>
+<li>IEEE Mediterranean Conference on Control and Automation 2023 (MED)</li>
 </ul>
 </li>
 <li>
