--- a/index.html
+++ b/index.html
@@ -1650,6 +1650,7 @@
 <li>IEEE Transactions on Image Processing (TIP)</li>
 <li>International Conference on Artificial Neural Networks 2021 (ICANN)</li>
 <li>IEEE Mediterranean Conference on Control and Automation 2023 (MED)</li>
+<li>Efficient Deep Learning for Computer Vision (CVPR Workshop) 2023</li>
 </ul>
 </li>
 <li>
