--- a/index.html
+++ b/index.html
@@ -1657,6 +1657,7 @@
 <h4 id="program-committee-member">Program committee member:</h4>
 <ul>
 <li>International Conference on Artificial Neural Networks 2022 (ICANN)</li>
+<li>International Conference on Artificial Neural Networks 2023 (ICANN)</li>
 </ul>
 </li>
 <li>
@@ -1764,6 +1765,17 @@
 <div class="row">
   <div class="col-md-6" markdown="1">
 <ul>
+<li>
+<h3 id="2023">2023</h3>
+<ul>
+<li>
+<h4 id="2023-heidelberg-laureate-forum-participant">2023 Heidelberg Laureate Forum Participant</h4>
+</li>
+<li>
+<h4 id="g-research-grant-for-phd-students-and-postdocs-in-quantitative-fields">G-Research Grant for PhD students and postdocs in quantitative fields</h4>
+</li>
+</ul>
+</li>
 <li>
 <h3 id="2022">2022</h3>
 <ul>
