--- a/publication/ferianc-2023-impact/index.html
+++ b/publication/ferianc-2023-impact/index.html
@@ -804,8 +804,8 @@
     
 
   <span >
-      Martin Ferianc</span>, <span >
-      Ondrej Bohdal</span>, <span >
+      Martin Ferianc</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
+      Ondrej Bohdal</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
       Timothy Hospedales</span>, <span >
       Miguel Rodrigues</span>
   </div>
