--- a/index.html
+++ b/index.html
@@ -1661,10 +1661,13 @@
 <h3 id="2023">2023</h3>
 <ul>
 <li>
-<h4 id="2023-heidelberg-laureate-forum-participant">2023 Heidelberg Laureate Forum Participant</h4>
+<h4 id="heidelberg-laureate-forum-hlf-participant">Heidelberg Laureate Forum (HLF) Participant</h4>
 </li>
 <li>
-<h4 id="g-research-grant-for-phd-students-and-postdocs-in-quantitative-fields">G-Research Grant for PhD students and postdocs in quantitative fields</h4>
+<h4 id="g-research-grant-supporting-hlf-participation">G-Research Grant supporting HLF Participation</h4>
+</li>
+<li>
+<h4 id="sap-grant-supporting-hlf-participation">SAP Grant supporting HLF Participation</h4>
 </li>
 </ul>
 </li>
@@ -1741,6 +1744,10 @@
 </li>
 </ul>
 </li>
+</ul>
+  </div>
+  <div class="col-md-6" markdown="1">
+<ul>
 <li>
 <h3 id="2017">2017</h3>
 <ul>
@@ -1755,10 +1762,6 @@
 </li>
 </ul>
 </li>
-</ul>
-  </div>
-  <div class="col-md-6" markdown="1">
-<ul>
 <li>
 <h3 id="2016">2016</h3>
 <ul>
