--- a/index.html
+++ b/index.html
@@ -1543,6 +1543,7 @@
 <li>Efficient Deep Learning for Computer Vision (CVPR Workshop) 2023</li>
 <li>Workshop on Structured Probabilistic Inference &amp; Generative Modeling (ICML Workshop) 2023</li>
 <li>Workshop on Spurious Correlations, Invariance, and Stability (ICML Workshop) 2023</li>
+<li>Workshop on Causal Representation Learning (NeurIPS Workshop) 2023</li>
 </ul>
 </li>
 <li>
