--- a/index.html
+++ b/index.html
@@ -1475,6 +1475,12 @@
 <h3 id="teaching">Teaching</h3>
 <ul>
 <li>
+<h4 id="teaching-assistant-in-integrated-machine-learning-systems-emerging-topics-at-ucl-department-of-electronic-and-electrical-engineering">Teaching Assistant in Integrated Machine Learning Systems: Emerging Topics at UCL, Department of Electronic and Electrical Engineering</h4>
+<ul>
+<li>Spring 2024: <a href="https://www.ucl.ac.uk/short-courses/search-courses/integrated-machine-learning-systems-emerging-topics" target="_blank" rel="noopener">link</a></li>
+</ul>
+</li>
+<li>
 <h4 id="co-lecturer-in-foundations-of-machine-learning-and-data-science-at-ucl-department-of-information-studies">Co-Lecturer in Foundations of Machine Learning and Data Science at UCL, Department of Information Studies</h4>
 <ul>
 <li>Spring 2021: <a href="https://www.ucl.ac.uk/information-studies/inst0060-foundations-machine-learning-and-data-science" target="_blank" rel="noopener">link</a></li>
