--- a/index.html
+++ b/index.html
@@ -1848,6 +1848,14 @@
   <div class="col-md-6" markdown="1">
 <ul>
 <li>
+<h3 id="2023-1">2023</h3>
+<ul>
+<li>
+<h4 id="2023-heidelberg-laureate-forum-participanthttpswwwuclacukiccsnews2023octucl-iccs-student-attends-heidelberg-laureate-forum"><a href="https://www.ucl.ac.uk/iccs/news/2023/oct/ucl-iccs-student-attends-heidelberg-laureate-forum" target="_blank" rel="noopener">2023 Heidelberg Laureate Forum Participant</a></h4>
+</li>
+</ul>
+</li>
+<li>
 <h3 id="2022-1">2022</h3>
 <ul>
 <li>
