--- a/index.html
+++ b/index.html
@@ -1550,6 +1550,7 @@
 <li>Workshop on Structured Probabilistic Inference &amp; Generative Modeling (ICML Workshop) 2023</li>
 <li>Workshop on Spurious Correlations, Invariance, and Stability (ICML Workshop) 2023</li>
 <li>Workshop on Causal Representation Learning (NeurIPS Workshop) 2023</li>
+<li>IEEE International Symposium on Embedded Multicore/Many-core Systems-on-Chip  2023</li>
 </ul>
 </li>
 <li>
