Add reviewer experience

--- a/index.html
+++ b/index.html
@@ -1583,6 +1583,7 @@
 <li>IEEE Journal of Selected Topics in Signal Processing (JSTSP)</li>
 <li>IEEE Transactions on Circuits and Systems I (TCAS-I)</li>
 <li>IEEE Transactions on Image Processing (TIP)</li>
+<li>IEEE Solid-State Circuits Letters (SSC-L)</li>
 <li>International Conference on Artificial Neural Networks 2021 (ICANN)</li>
 <li>IEEE Mediterranean Conference on Control and Automation 2023 (MED)</li>
 <li>Efficient Deep Learning for Computer Vision (CVPR Workshop) 2023</li>
