Adding reviewer experience

--- a/index.html
+++ b/index.html
@@ -1591,6 +1591,7 @@
 <li>Workshop on Spurious Correlations, Invariance, and Stability (ICML Workshop) 2023</li>
 <li>Workshop on Causal Representation Learning (NeurIPS Workshop) 2023</li>
 <li>IEEE International Symposium on Embedded Multicore/Many-core Systems-on-Chip  2023</li>
+<li>AISTATS 2024</li>
 </ul>
 </li>
 <li>
