Add reviewer experience

--- a/index.html
+++ b/index.html
@@ -1592,6 +1592,7 @@
 <li>Workshop on Causal Representation Learning (NeurIPS Workshop) 2023</li>
 <li>IEEE International Symposium on Embedded Multicore/Many-core Systems-on-Chip  2023</li>
 <li>AISTATS 2024</li>
+<li>UAI 2024</li>
 </ul>
 </li>
 <li>
