--- a/index.html
+++ b/index.html
@@ -3859,22 +3859,26 @@
   <div class="col-lg-12 col-md-12" markdown="1">
 <ul>
 <li>
-<h3 id="yamlehttpsgithubcommartinferiancyamle"><a href="https://github.com/martinferianc/yamle" target="_blank" rel="noopener">YAMLE</a></h3>
+<h3 id="yamlehttpsgithubcommartinferiancyamle---creator"><a href="https://github.com/martinferianc/yamle" target="_blank" rel="noopener">YAMLE</a> - Creator</h3>
 <ul>
 <li>
-<h4 id="yamle-yet-another-machine-learning-environment-is-an-open-source-framework-that-facilitates-rapid-prototyping-and-experimentation-with-machine-learning-models-and-methods">YAMLE: Yet Another Machine Learning Environment is an open-source framework that facilitates rapid prototyping and experimentation with machine learning models and methods</h4>
+<h4 id="yamle-yet-another-machine-learning-environment-facilitates-rapid-prototyping-and-experimentation-with-machine-learning-models-and-methods">YAMLE: Yet Another Machine Learning Environment facilitates rapid prototyping and experimentation with machine learning models and methods</h4>
 </li>
 </ul>
 </li>
+<li>
+<h3 id="renatehttpsgithubcomawslabsrenate---founding-contributor"><a href="https://github.com/awslabs/Renate" target="_blank" rel="noopener">Renate</a> - Founding Contributor</h3>
+<ul>
+<li>
+<h4 id="continual-learning-with-hyperparameter-tuning-model-selection-after-each-update-and-a-variety-of-continual-learning-strategies">Continual learning with hyperparameter tuning, model selection after each update, and a variety of continual learning strategies</h4>
+</li>
 </ul>
-  </div>
-  <div class="col-lg-12 col-md-12" markdown="1">
+</li>
+<li>
+<h3 id="ol-emshttpsgithubcomvittpiol-ems---founding-contributor"><a href="https://github.com/vittpi/ol-ems" target="_blank" rel="noopener">OL-EMS</a> - Founding Contributor</h3>
 <ul>
 <li>
-<h3 id="renatehttpsgithubcomawslabsrenate"><a href="https://github.com/awslabs/Renate" target="_blank" rel="noopener">Renate</a></h3>
-<ul>
-<li>
-<h4 id="open-source-library-for-continual-learning-with-enabled-hyperparameter-tuning-model-selection-after-each-update-and-a-variety-of-continual-learning-strategies">Open-source library for continual learning with enabled hyperparameter tuning, model selection after each update, and a variety of continual learning strategies</h4>
+<h4 id="online-learning-control-algorithms-specialising-in-energy-management-systems">Online learning control algorithms specialising in energy management systems</h4>
 </li>
 </ul>
 </li>
