Add reviewer experience

--- a/index.html
+++ b/index.html
@@ -1588,6 +1588,7 @@
 <li>IEEE Transactions on Circuits and Systems I (TCAS-I)</li>
 <li>IEEE Transactions on Image Processing (TIP)</li>
 <li>IEEE Solid-State Circuits Letters (SSC-L)</li>
+<li>IEEE Transactions on Computers (TC)</li>
 <li>AISTATS 2024</li>
 <li>UAI 2024</li>
 <li>IEEE Mediterranean Conference on Control and Automation 2023 (MED)</li>
