--- a/index.html
+++ b/index.html
@@ -1382,7 +1382,7 @@
                 
               </div>
 
-          <div class="card-text">Contributed to Tensorflow-to-Verilog compiler for a streaming engine on an FPGA to accelerate convolutional neural networks for face detection</div>
+          <div class="card-text">Developed a verification platform for hardware implementation of convolutional neural networks on FPGAs</div>
         </div>
       </div>
     </div>
