--- a/404.html
+++ b/404.html
@@ -64,7 +64,7 @@
   
     
   
-  <meta name="description" content="AI Research Engineer" />
+  <meta name="description" content="Incoming AI Research Engineer" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://martinferianc.github.io/404.html" />
@@ -310,7 +310,7 @@
   <meta property="og:site_name" content="Martin Ferianc" />
   <meta property="og:url" content="https://martinferianc.github.io/404.html" />
   <meta property="og:title" content="404 Page not found | Martin Ferianc" />
-  <meta property="og:description" content="AI Research Engineer" /><meta property="og:image" content="https://martinferianc.github.io/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Incoming AI Research Engineer" /><meta property="og:image" content="https://martinferianc.github.io/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://martinferianc.github.io/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
