--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -781,8 +781,8 @@
         
 
   <span >
-      Youssef Abdalla</span>, <span >
-      Martin Ferianc</span>, <span >
+      Youssef Abdalla</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
+      Martin Ferianc</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
       Atheer Awad</span>, <span >
       Jeesu Kim</span>, <span >
       Moe Elbadawi</span>, <span >
