--- a/index.html
+++ b/index.html
@@ -1628,6 +1628,7 @@
 <li>IEEE Transactions on Image Processing (TIP)</li>
 <li>IEEE Solid-State Circuits Letters (SSC-L)</li>
 <li>IEEE Transactions on Computers (TC)</li>
+<li>IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)</li>
 <li>PLOS ONE</li>
 <li>AISTATS 2024</li>
 <li>UAI 2024</li>
