--- a/index.html
+++ b/index.html
@@ -1629,6 +1629,7 @@
 <li>IEEE Solid-State Circuits Letters (SSC-L)</li>
 <li>IEEE Transactions on Computers (TC)</li>
 <li>IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)</li>
+<li>IEEE Transactions on Circuits and Systems for Artificial Intelligence (TCASAI)</li>
 <li>PLOS ONE</li>
 <li>AISTATS 2024</li>
 <li>UAI 2024</li>
@@ -1665,6 +1666,7 @@
 </ul>
   </div>
 </div>
+
   </div>
 
 
