--- a/index.html
+++ b/index.html
@@ -1622,6 +1622,9 @@
 <li>
 <h4 id="reviewer">Reviewer:</h4>
 <ul>
+<li>
+<h5 id="journals">Journals:</h5>
+<ul>
 <li>IEEE Transactions for Neural Networks and Learning Systems (TNNLS)</li>
 <li>IEEE Journal of Selected Topics in Signal Processing (JSTSP)</li>
 <li>IEEE Transactions on Circuits and Systems I (TCAS-I)</li>
@@ -1631,6 +1634,11 @@
 <li>IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)</li>
 <li>IEEE Transactions on Circuits and Systems for Artificial Intelligence (TCASAI)</li>
 <li>PLOS ONE</li>
+</ul>
+</li>
+<li>
+<h5 id="conferencesworkshops">Conferences/Workshops:</h5>
+<ul>
 <li>AISTATS 2024</li>
 <li>UAI 2024</li>
 <li>IEEE Mediterranean Conference on Control and Automation 2023 (MED)</li>
@@ -1639,14 +1647,9 @@
 <li>Workshop on Spurious Correlations, Invariance, and Stability (ICML Workshop) 2023</li>
 <li>Workshop on Causal Representation Learning (NeurIPS Workshop) 2023</li>
 <li>IEEE International Symposium on Embedded Multicore/Many-core Systems-on-Chip  2023</li>
-<li>International Conference on Artificial Neural Networks 2021 (ICANN)</li>
+<li>International Conference on Artificial Neural Networks 2023/22/21 (ICANN)</li>
 </ul>
 </li>
-<li>
-<h4 id="program-committee-member">Program committee member:</h4>
-<ul>
-<li>International Conference on Artificial Neural Networks 2023 (ICANN)</li>
-<li>International Conference on Artificial Neural Networks 2022 (ICANN)</li>
 </ul>
 </li>
 <li>
