--- a/index.html
+++ b/index.html
@@ -1661,7 +1661,7 @@
 <li>
 <h4 id="organiser">Organiser:</h4>
 <ul>
-<li>Weekly Machine learning reading group at UCL EE Department (~25 people, 2023)</li>
+<li>Weekly Machine learning reading group at UCL EE Department (~25 people) 2023</li>
 </ul>
 </li>
 </ul>
@@ -4287,7 +4287,7 @@
     
     <li>
       <i class="fa-li fas fa-envelope fa-2x" aria-hidden="true"></i>
-      <span id="person-email"><a href="mailto:martin.ferianc.19@ucl.ac.uk">martin.ferianc.19@ucl.ac.uk</a></span>
+      <span id="person-email"><a href="mailto:martin%20[dot]%20ferianc%20[dot]%2019%20[at]%20ucl%20[dot]%20ac%20[dot]%20uk">martin [dot] ferianc [dot] 19 [at] ucl [dot] ac [dot] uk</a></span>
     </li>
     
 
