--- a/index.html
+++ b/index.html
@@ -1633,6 +1633,7 @@
 <li>IEEE Transactions on Computers (TC)</li>
 <li>IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)</li>
 <li>IEEE Transactions on Circuits and Systems for Artificial Intelligence (TCASAI)</li>
+<li>Transactions on Machine Learning Research (TMLR)</li>
 <li>PLOS ONE</li>
 </ul>
 </li>
