--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,7 @@
                 
               </div>
 
-          <div class="card-text">Research and implementation of uncertainty quantification in machine learning applied in defence</div>
+          <div class="card-text">Verification, validation, assurance and confidence quantification and calibration of machine learning models</div>
         </div>
       </div>
     </div>
