--- a/publication/ferianc-2024-making/index.html
+++ b/publication/ferianc-2024-making/index.html
@@ -905,8 +905,8 @@
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Type</div>
           <div class="col-12 col-md-9">
-            <a href="/publication/#3">
-              Preprint
+            <a href="/publication/#7">
+              Thesis
             </a>
           </div>
         </div>
