--- a/index.html
+++ b/index.html
@@ -968,7 +968,7 @@
     <h1>About</h1>
 
     <div class="article-style">
-      <p>Martin is an AI Research Engineer at Helsing, London, UK. Martin obtained a PhD in Electronic and Electrical Engineering from University College London, London, UK in 2024. Prior to that, Martin obtained an MEng in Electronic and Information Engineering from Imperial College London, London, UK in 2015. His research interests include Bayesian neural networks, deep learning, hardware acceleration and confidence calibration and reliable, safe and secure AI. He has hands-on experience from industrial/academic placements in different countries.</p>
+      <p>Martin is an AI Research Engineer at Helsing, London, UK working on AI Assurance. Martin obtained a PhD in Electronic and Electrical Engineering from University College London, London, UK in 2024. Prior to that, Martin obtained an MEng in Electronic and Information Engineering from Imperial College London, London, UK in 2019. He has hands-on experience from industrial placements spanning ARM, Deeplite, Amazon and private consultancy projects in different countries. His research interests include Bayesian inference, deep learning, hardware acceleration and reliable, safe and secure artificial intelligence.</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="https://drive.google.com/file/d/1AtL05oM28z9ugBvJzbzGUOwrR7y91zX7/view?usp=sharing" target="_blank">resumé/CV</a>.</p>
 
