--- a/publication/index.html
+++ b/publication/index.html
@@ -956,8 +956,8 @@
     
 
   <span >
-      Youssef Abdalla</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
-      Martin Ferianc</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
+      Youssef Abdalla</span>, <span >
+      Martin Ferianc</span>, <span >
       Haya Alfassam</span>, <span >
       Atheer Awad</span>, <span >
       Ruochen Qiao</span>, <span >
