--- a/publication/ferianc-2024-navigating/index.html
+++ b/publication/ferianc-2024-navigating/index.html
@@ -694,7 +694,7 @@
           
 
           <li class="nav-item">
-            <a class="nav-link " href="https://drive.google.com/file/d/1AtL05oM28z9ugBvJzbzGUOwrR7y91zX7/view" target="_blank" rel="noopener"><span>CV</span></a>
+            <a class="nav-link " href="https://drive.google.com/file/d/1OqdHKV_hb6iU9kh1_hhj4A9Owk9oBy6T/view?usp=sharing" target="_blank" rel="noopener"><span>CV</span></a>
           </li>
 
           
